--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "qodevicesdevel"
-version = "0.0.1"
+name = "qodevices"
+version = "0.1"
 authors = [
   { name="Thormund", email="thormund@nus.edu.sg" },
 ]
