--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/TeledyneLeCroy/lecroydso.git@main
 git+https://github.com/python-ivi/python-usbtmc.git@master
 pyserial>=3.5
 pyusb>=1.2.1
