--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "qodevices"
-version = "0.1.2"
+version = "0.1.3"
 authors = [
   { name="Thormund", email="thormund@nus.edu.sg" },
 ]
@@ -17,6 +17,14 @@ requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating SYstem :: OS Independent",
+]
+dependencies = [
+    "LeCroyDSO @ git+https://github.com/TeledyneLeCroy/lecroydso.git@main",
+    "pyserial",
+    "python-usbtmc @ git+https://github.com/python-ivi/python-usbtmc.git@master",
+    "pyusb",
+    "PyVISA",
+    "PyVISA-py"
 ]
 
 # [project.urls]
