Adds initial Anritsu Spectrum Analyzer functions
This commit provides basic Anritsu MS2732B spectrum analyzer functionality
using a VISA backend. However, the buffer being read often has many issues,
and so, a similarly equivalent class built on USBTMC is also introduced,
which has much less issues with reading out of the device. However, automated
mirroring from the VISA-based class to the TMC-based class has yet to be
automatically generated, with implementation choice to be determined.

This commit also provides small typographical corrections.

This commit has not been linted to be PEP compliant.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "qodevices"
-version = "0.1.6"
+version = "0.1.7"
 authors = [
   { name="Thormund", email="thormund@nus.edu.sg" },
 ]
@@ -16,7 +16,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Operating SYstem :: OS Independent",
+    "Operating System :: OS Independent",
 ]
 dependencies = [
     "LeCroyDSO @ git+ssh://git@github.com/the-fibre-lab/lecroydso.git@main",
@@ -24,7 +24,8 @@ dependencies = [
     "python-usbtmc @ git+https://github.com/python-ivi/python-usbtmc.git@master",
     "pyusb",
     "PyVISA",
-    "PyVISA-py"
+    "PyVISA-py",
+    "numpy"
 ]
 
 # [project.urls]
