--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,19 @@ dependencies = [
     "numpy"
 ]
 
+# [tool.setuptools]
+# packages = ["qodevices"]
+# package-dir = {"" = "qodevices"}
+
+# [tool.setuptools.package-dir]
+# qodevices = "qodevices"
+
+[tool.setuptools.packages.find]
+# where = ["qodevices"]
+# include = ["*"]
+exclude = ["*_constructor"]
+namespaces = false
+
 # [project.urls]
 # "Homepage" = https://github.com/the-fibre-lab/python-drivers
 # "Bug Tracker" = https://github.com/the-fibre-lab/python-drivers/issues
