Fixes adding subfolders as individual packages
It is entirely possible that prior improper builds that are cached
get used in the build process. The current configuration as
provided in the pyproject.toml file is now correct at ensuring
subfolders do not become their own individual packages. This has
been tested against a clean venv.
In the event of any issues, please clean out any temporary files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,15 +30,15 @@ dependencies = [
 
 # [tool.setuptools]
 # packages = ["qodevices"]
-# package-dir = {"" = "qodevices"}
+# package-dir = {"" = "."}
 
 # [tool.setuptools.package-dir]
 # qodevices = "qodevices"
 
 [tool.setuptools.packages.find]
-# where = ["qodevices"]
-# include = ["*"]
-exclude = ["*_constructor"]
+where = ["."]
+include = ["qodevices.*"]
+exclude = ["qodevices.*_constructor"]
 namespaces = false
 
 # [project.urls]
