--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ git+https://github.com/TeledyneLeCroy/lecroydso.git@main
 git+https://github.com/python-ivi/python-usbtmc.git@master
 pyserial>=3.5
 pyusb>=1.2.1
+pyvisa>=1.13
 pyvisa-py>=0.5.3
 numpy>=1.23
