Improve first install experience
- Added some dependencies to make installing into a new venv more
  immediate.
- Updated the documentation to handle the NIVisa update case, since dkms
  was not cooperating in creating nipalk.ko as needed by IVI backend
  (when passed into PyVisa(-shell)).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,13 @@ classifiers = [
 ]
 dependencies = [
     "LeCroyDSO @ git+ssh://git@github.com/the-fibre-lab/lecroydso.git@main",
+    "psutil",
     "pyserial",
     "python-usbtmc @ git+https://github.com/python-ivi/python-usbtmc.git@master",
     "pyusb",
     "PyVISA",
-    "PyVISA-py"
+    "PyVISA-py",
+    "zeroconf"
 ]
 
 # [project.urls]
